--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "typescript": "^4.9.3",
     "unocss": "^0.50.6",
     "vite": "^4.1.0",
+    "vite-plugin-eslint": "^1.8.1",
     "vue-tsc": "^1.0.24"
   },
   "lint-staged": {
